Fix for dark mode

--- a/src/components/Detail/styles.scss
+++ b/src/components/Detail/styles.scss
@@ -2,6 +2,7 @@
   overflow: hidden;
   margin: 0 0.625rem;
   font-family: ABCSans, Helvetica, Arial, sans-serif;
+  color: #000;
 
   @media (min-width: 40rem) {
     opacity: 0;
